tests/fixtures/invalid/if_missing_else_return.torel
unit fixtures.if_missing_else_return;

export proc main() -> Int32 {
    if true {
        return 1;
    }
}
